Fix spacing issues for mobile

--- a/style.css
+++ b/style.css
@@ -3,18 +3,26 @@ body {
   background-size: cover;
 }
 
-.container.main {
-  margin: 85px 0;
+.main {
+  margin-right: 25px;
+  margin-left: 25px;
 }
 
-.row {
-    display: table;
-}
+@media (min-width: 540px) {
 
-[class*="col-"] {
-    float: none;
-    display: table-cell;
-    vertical-align: top;
+  .main {
+    margin: 85px 0;
+  }
+
+  .row {
+      display: table;
+  }
+
+  [class*="col-"] {
+      float: none;
+      display: table-cell;
+      vertical-align: top;
+  }
 }
 
 #col-1 {
@@ -26,6 +34,7 @@ body {
 #col-1 .content {
   text-align: center;
   margin: 30px 75px;
+  width: 308px;
 }
 
 #logo {
@@ -65,7 +74,6 @@ body {
 }
 
 #col-2 {
-  /*width: 100%;*/
   height: 100%;
   background: rgba(0, 0, 0, .6);
 }
@@ -78,6 +86,7 @@ body {
   justify-content: flex-start;
   color: #ffffff;
   font-family: Tahoma;
+  width: 500px;
 }
 
 a {
@@ -195,7 +204,7 @@ a {
 
 #login-error {
   margin-top: 50px;
-  width: 440px;
+  width: 100%;
 }
 
 .error-text {
@@ -217,4 +226,30 @@ a {
   color: #ed3237;
 }
 
+@media (max-width: 540px) {
+
+  #col-1 .content,
+  #col-2 .content {
+    margin: 25px;
+    width: 80%;
+  }
+
+  #col-1 .content {
+    margin-bottom: 0;
+    padding-bottom: 25px;
+  }
+
+  #col-2 .content {
+    margin-top: 0;
+  }
+
+  .container {
+    padding-bottom: 25px;
+  }
+
+  #logo {
+    margin-top: 25px;
+  }
+
+}
 
